--- a/repo-make.conf
+++ b/repo-make.conf
@@ -15,7 +15,7 @@ deps/serdisplib
 deps/tntdb
 deps/tntnet
 deps/xlogin
-deps/udisks
+#deps/udisks
 fonts/ttf-opensans
 fonts/ttf-roboto
 fonts/ttf-sourcesanspro
@@ -26,38 +26,38 @@ firmware/ngene-firmware
 firmware/ttpci-firmware
 irctl
 irmplircd
-kodi-addon-pvr-vdr-vnsi
-kodi-addon-pvr-hts
-kodi-addon-graphlcd
-naludump
-tvheadend
-#oscam
+#kodi-addon-pvr-vdr-vnsi
+#kodi-addon-pvr-hts
+#kodi-addon-graphlcd
+#naludump
+#tvheadend
+oscam
 vdr
-vdr-addon-lifeguard
-vdr-checkts
+#vdr-addon-lifeguard
+#vdr-checkts
 vdrctl
 vdr4arch-keyring
-vdradmin-am
-vdrnfofs
+#vdradmin-am
+#vdrnfofs
 vdrpbd
 w_scan
 vdr-xorg
-yausbir_lirc
-kodi-standalone-service
-kodi-setwakeup
-plugins/vdr-autostart
-plugins/vdr-bgprocess
+#yausbir_lirc
+#kodi-standalone-service
+#kodi-setwakeup
+#plugins/vdr-autostart
+#plugins/vdr-bgprocess
 plugins/vdr-cdplayer
 plugins/vdr-cecremote
 #plugins/vdr-chanman
 #plugins/vdr-channellists
-plugins/vdr-cinebars
-plugins/vdr-dbus2vdr
-#plugins/vdr-ddci2
-plugins/vdr-devstatus
-plugins/vdr-dfatmo
-plugins/vdr-dummydevice
-plugins/vdr-duplicates
+#plugins/vdr-cinebars
+#plugins/vdr-dbus2vdr
+plugins/vdr-ddci2
+#plugins/vdr-devstatus
+#plugins/vdr-dfatmo
+#plugins/vdr-dummydevice
+#plugins/vdr-duplicates
 plugins/vdr-dvbapi
 plugins/vdr-eepg
 plugins/vdr-epg2vdr
@@ -65,82 +65,83 @@ plugins/vdr-epgborder
 plugins/vdr-epgfixer
 plugins/vdr-epgsearch
 plugins/vdr-externalplayer
-plugins/vdr-extrecmenu
-plugins/vdr-favorites
+#plugins/vdr-extrecmenu
+#plugins/vdr-favorites
 plugins/vdr-femon
-plugins/vdr-filebrowser
+#plugins/vdr-filebrowser
 plugins/vdr-fritzbox
-plugins/vdr-gamepad
-plugins/vdr-graphlcd
-graphlcd-skins/pearldpf-simple
+#plugins/vdr-gamepad
+#plugins/vdr-graphlcd
+#graphlcd-skins/pearldpf-simple
 #plugins/vdr-hddarchive
-plugins/vdr-imonlcd
+#plugins/vdr-imonlcd
 plugins/vdr-iptv
-plugins/vdr-lcdproc
-plugins/vdr-live
+#plugins/vdr-lcdproc
+#plugins/vdr-live
 #plugins/vdr-loadepg Build fails with GCC 7
 plugins/vdr-markad
 plugins/vdr-mp3
 plugins/vdr-mpv
 plugins/vdr-neutrinoepg
-plugins/vdr-noepg
+plugins/vdr-nordlichtsepg
+#plugins/vdr-noepg
 plugins/vdr-osdteletext
-plugins/vdr-osd2web
+#plugins/vdr-osd2web
 #plugins/vdr-peer
 plugins/vdr-play
-plugins/vdr-pulsecontrol
+#plugins/vdr-pulsecontrol
 plugins/vdr-radio
-plugins/vdr-recsearch
+#plugins/vdr-recsearch
 plugins/vdr-remote
-plugins/vdr-restfulapi
+#plugins/vdr-restfulapi
 #plugins/vdr-rpihddevice
-plugins/vdr-rssreader
+#plugins/vdr-rssreader
 plugins/vdr-satip
-plugins/vdr-scraper2vdr
-plugins/vdr-skindesigner
+#plugins/vdr-scraper2vdr
+#plugins/vdr-skindesigner
 plugins/vdr-skinenigmang
-plugins/vdr-plex
-plugins/vdr-skinflat
-plugins/vdr-skinflatplus
+#plugins/vdr-plex
+#plugins/vdr-skinflat
+#plugins/vdr-skinflatplus
 #plugins/vdr-skinpearlhd
 plugins/vdr-skinsoppalusikka
-plugins/vdr-sleeptimer
-plugins/vdr-softhdcuvid
-plugins/vdr-softhddevice
+#plugins/vdr-sleeptimer
+#plugins/vdr-softhdcuvid
+#plugins/vdr-softhddevice
 plugins/vdr-streamdev
 #plugins/vdr-suspendoutput
-plugins/vdr-svdrposd
-plugins/vdr-svdrpservice
-plugins/vdr-epgsync
-plugins/vdr-trayopenng
-plugins/vdr-remoteosd
+#plugins/vdr-svdrposd
+#plugins/vdr-svdrpservice
+#plugins/vdr-epgsync
+#plugins/vdr-trayopenng
+#plugins/vdr-remoteosd
 #plugins/vdr-remotetimers
 plugins/vdr-systeminfo
-plugins/vdr-targavfd
-plugins/vdr-text2skin
-text2skin-skins/anthra-1024
-text2skin-skins/anthra-1280-fs
-text2skin-skins/anthra-1280-os
-text2skin-skins/anthra-1920-fs
-text2skin-skins/anthra-1920-fse
-text2skin-skins/anthra-1920-fst
-text2skin-skins/anthra-1920-os
-text2skin-skins/anthra-1920-ose
-text2skin-skins/anthra-1920-ost
-text2skin-skins/anthra-sd
-text2skin-skins/narrowhd
-plugins/vdr-tvguide
-plugins/vdr-tvguideng
+#plugins/vdr-targavfd
+#plugins/vdr-text2skin
+#text2skin-skins/anthra-1024
+#text2skin-skins/anthra-1280-fs
+#text2skin-skins/anthra-1280-os
+#text2skin-skins/anthra-1920-fs
+#text2skin-skins/anthra-1920-fse
+#text2skin-skins/anthra-1920-fst
+#text2skin-skins/anthra-1920-os
+#text2skin-skins/anthra-1920-ose
+#text2skin-skins/anthra-1920-ost
+#text2skin-skins/anthra-sd
+#text2skin-skins/narrowhd
+#plugins/vdr-tvguide
+#plugins/vdr-tvguideng
 plugins/vdr-tvscraper
-plugins/vdr-undelete
+#plugins/vdr-undelete
 #plugins/vdr-upnp
-plugins/vdr-vdrmanager
-plugins/vdr-vdrtva
-plugins/vdr-vnsiserver
-plugins/vdr-vompserver
-plugins/vdr-weatherforecast
+#plugins/vdr-vdrmanager
+#plugins/vdr-vdrtva
+#plugins/vdr-vnsiserver
+#plugins/vdr-vompserver
+#plugins/vdr-weatherforecast
 plugins/vdr-wirbelscan
-plugins/vdr-xineliboutput
+#plugins/vdr-xineliboutput
 plugins/vdr-xmltv2vdr
 #plugins/vdr-zaphistory
-plugins/vdr-zappilot
+#plugins/vdr-zappilot
