vaapidevice: Corrected pkgdesc

--- a/plugins/vdr-vaapidevice/PKGBUILD
+++ b/plugins/vdr-vaapidevice/PKGBUILD
@@ -5,7 +5,7 @@ pkgver=0.7.0.r205.ga17c110
 _gitver=d19657bae399e79df107e316ca40922d21393f80
 _vdrapi=2.4.1
 pkgrel=3
-pkgdesc="The plugin provides an EPG (Electronic Program Guide) similar to the built-in one, but with extra features."
+pkgdesc="A VA-API output device plugin for VDR"
 url="https://github.com/pesintta/vdr-plugin-vaapidevice"
 arch=('x86_64' 'i686' )
 license=('GPL2')
