--- a/repo-make.conf
+++ b/repo-make.conf
@@ -6,55 +6,55 @@
 REPONAME=vdr4arch
 CHECKSCRIPT=./checkpkg
 
-deps/cxxtools
-deps/graphlcd-base
+#deps/cxxtools
+#deps/graphlcd-base
 deps/libdvbcsa
-deps/libmcli
+#deps/libmcli
 deps/linuxtv-dvb-apps
-deps/perl-template-plugin-javascript
-deps/serdisplib
-deps/tnftp6
-deps/tntdb
-deps/tntnet
+#deps/perl-template-plugin-javascript
+#deps/serdisplib
+#deps/tnftp6
+#deps/tntdb
+#deps/tntnet
 deps/xlogin
 fonts/ttf-sourcesanspro
 fonts/ttf-vdrsymbols
-vdr-epg-daemon
-firmware/dvbsky-firmware
-firmware/ngene-firmware
-firmware/ttpci-firmware
-irctl
+#vdr-epg-daemon
+#firmware/dvbsky-firmware
+#firmware/ngene-firmware
+#firmware/ttpci-firmware
+#irctl
 irmplircd
-kodi-addon-pvr-vdr-vnsi
-kodi-addon-pvr-hts
-kodi-addon-graphlcd
-minisatip
-naludump
-tvheadend
+#kodi-addon-pvr-vdr-vnsi
+#kodi-addon-pvr-hts
+#kodi-addon-graphlcd
+#minisatip
+#naludump
+#tvheadend
 #oscam
 vdr
 vdr-addon-lifeguard
 vdr-checkts
 vdrctl
 vdr4arch-keyring
-vdradmin-am
+#vdradmin-am
 vdrnfofs
 vdrpbd
 w_scan
 vdr-xorg
-yausbir_lirc
+#yausbir_lirc
 kodi-standalone-service
 kodi-setwakeup
 plugins/vdr-autostart
 plugins/vdr-bgprocess
 plugins/vdr-cdplayer
 plugins/vdr-cecremote
-#plugins/vdr-chanman
-#plugins/vdr-channellists
+plugins/vdr-chanman
+plugins/vdr-channellists
 plugins/vdr-channelscan
 plugins/vdr-cinebars
 plugins/vdr-dbus2vdr
-#plugins/vdr-ddci2
+plugins/vdr-ddci2
 plugins/vdr-devstatus
 plugins/vdr-dfatmo
 plugins/vdr-dummydevice
@@ -74,7 +74,7 @@ plugins/vdr-fritzbox
 plugins/vdr-gamepad
 plugins/vdr-graphlcd
 graphlcd-skins/pearldpf-simple
-#plugins/vdr-hddarchive
+plugins/vdr-hddarchive
 plugins/vdr-imonlcd
 plugins/vdr-iptv
 plugins/vdr-lcdproc
@@ -87,29 +87,30 @@ plugins/vdr-neutrinoepg
 plugins/vdr-noepg
 plugins/vdr-osdteletext
 plugins/vdr-osd2web
-#plugins/vdr-peer
+plugins/vdr-peer
 plugins/vdr-play
 plugins/vdr-pulsecontrol
 plugins/vdr-radio
 plugins/vdr-recsearch
 plugins/vdr-remote
 plugins/vdr-restfulapi
-#plugins/vdr-rpihddevice
+plugins/vdr-rpihddevice
 plugins/vdr-rssreader
 plugins/vdr-satip
-#plugins/vdr-scraper2vdr
+plugins/vdr-scraper2vdr
 plugins/vdr-skindesigner
 plugins/vdr-skinenigmang
-plugins/vdr-plex
-plugins/vdr-skinflat
-plugins/vdr-skinflatplus
+#plugins/vdr-plex
+#plugins/vdr-skinflat
+#plugins/vdr-skinflatplus
 #plugins/vdr-skinpearlhd
 plugins/vdr-skinsoppalusikka
 plugins/vdr-sleeptimer
 #plugins/vdr-softhdcuvid
+plugins/vdr-softhdvaapi
 plugins/vdr-softhddevice
 plugins/vdr-streamdev
-#plugins/vdr-suspendoutput
+plugins/vdr-suspendoutput
 plugins/vdr-svdrposd
 plugins/vdr-svdrpservice
 plugins/vdr-epgsync
@@ -118,18 +119,18 @@ plugins/vdr-remoteosd
 #plugins/vdr-remotetimers
 plugins/vdr-systeminfo
 plugins/vdr-targavfd
-plugins/vdr-text2skin
-text2skin-skins/anthra-1024
-text2skin-skins/anthra-1280-fs
-text2skin-skins/anthra-1280-os
-text2skin-skins/anthra-1920-fs
-text2skin-skins/anthra-1920-fse
-text2skin-skins/anthra-1920-fst
-text2skin-skins/anthra-1920-os
-text2skin-skins/anthra-1920-ose
-text2skin-skins/anthra-1920-ost
-text2skin-skins/anthra-sd
-text2skin-skins/narrowhd
+#plugins/vdr-text2skin
+#text2skin-skins/anthra-1024
+#text2skin-skins/anthra-1280-fs
+#text2skin-skins/anthra-1280-os
+#text2skin-skins/anthra-1920-fs
+#text2skin-skins/anthra-1920-fse
+#text2skin-skins/anthra-1920-fst
+#text2skin-skins/anthra-1920-os
+#text2skin-skins/anthra-1920-ose
+#text2skin-skins/anthra-1920-ost
+#text2skin-skins/anthra-sd
+#text2skin-skins/narrowhd
 plugins/vdr-tvguide
 plugins/vdr-tvguideng
 plugins/vdr-tvscraper
