--- a/plugins/vdr-wirbelscan/PKGBUILD
+++ b/plugins/vdr-wirbelscan/PKGBUILD
@@ -3,27 +3,28 @@
 # Maintainer: Christopher Reimer <mail+vdr4arch[at]c-reimer[dot]de>
 pkgname=vdr-wirbelscan
 pkgver=2018.11.04
+_gitver=e1377b95312a138a41f93d7b06b3adb4ed4e7324
 _vdrapi=2.4.1
-pkgrel=1
+pkgrel=2
 pkgdesc="Performs a channel scans for DVB-T, DVB-C and DVB-S"
 url="http://wirbel.htpc-forum.de/wirbelscan/index2.html"
 arch=('x86_64' 'i686' 'arm' 'armv6h' 'armv7h')
 license=('GPL2')
 depends=('gcc-libs' "vdr-api=${_vdrapi}")
 _plugname=${pkgname//vdr-/}
-source=("http://wirbel.htpc-forum.de/wirbelscan/vdr-wirbelscan-$pkgver.tgz"
+source=("vdr-plugin-${_plugname}::git+https://github.com/CvH/vdr-plugin-wirbelscan#commit=$_gitver"
         "50-$_plugname.conf")
 backup=("etc/vdr/conf.avail/50-$_plugname.conf")
-md5sums=('fc16d434f92b5b672ca1d7b918500b8e'
+md5sums=('SKIP'
          'cb2ff89d8c275d790cf613d4cf9fa180')
 
 build() {
-  cd "${srcdir}/${_plugname}-${pkgver}"
+  cd "${srcdir}/vdr-plugin-${_plugname}"
   make
 }
 
 package() {
-  cd "${srcdir}/${_plugname}-${pkgver}"
+  cd "${srcdir}/vdr-plugin-${_plugname}"
   make DESTDIR="$pkgdir" install
 
   mkdir -p "$pkgdir/etc/vdr/conf.avail"
