Adaptions on .gitignore and repo-make.conf

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,65 @@ pkg/
 src/
 repo/
 /aur-git-cache
+
+.vscode/
+deps/graphlcd-base/graphlcd-base/
+deps/linuxtv-dvb-apps/0003-handle-static-shared-only-build.patch
+deps/linuxtv-dvb-apps/0005-utils-fix-build-with-kernel-headers-4.14.patch
+deps/linuxtv-dvb-apps/dvb-apps/
+deps/linuxtv-dvb-apps/linuxtv-dvb-apps-1.1.1.20100223-perl526.patch
+deps/xlogin/xlogin/
+fonts/ttf-sourcesanspro/SourceSansPro-Black.ttf
+fonts/ttf-sourcesanspro/SourceSansPro-BlackItalic.ttf
+fonts/ttf-sourcesanspro/SourceSansPro-Bold.ttf
+fonts/ttf-sourcesanspro/SourceSansPro-BoldItalic.ttf
+fonts/ttf-sourcesanspro/SourceSansPro-ExtraLight.ttf
+fonts/ttf-sourcesanspro/SourceSansPro-ExtraLightItalic.ttf
+fonts/ttf-sourcesanspro/SourceSansPro-Italic.ttf
+fonts/ttf-sourcesanspro/SourceSansPro-Light.ttf
+fonts/ttf-sourcesanspro/SourceSansPro-LightItalic.ttf
+fonts/ttf-sourcesanspro/SourceSansPro-Regular.ttf
+fonts/ttf-sourcesanspro/SourceSansPro-SemiBold.ttf
+fonts/ttf-sourcesanspro/SourceSansPro-SemiBoldItalic.ttf
+fonts/ttf-vdrsymbols/LICENSE
+graphlcd-skins/pearldpf-simple/pearldpf-simple/
+irmplircd/irmplircd/
+plugins/vdr-cecremote/1.4.0-libcec4-fix.patch
+plugins/vdr-chanman/vdr-chanman-Makefile
+plugins/vdr-channelscan/channelscan/
+plugins/vdr-ddci2/vdr-plugin-ddci2/
+plugins/vdr-dvbapi/vdr-plugin-dvbapi/
+plugins/vdr-eepg/vdr-plugin-eepg/
+plugins/vdr-epgfixer/vdr-plugin-epgfixer/
+plugins/vdr-epgsearch/vdr-plugin-epgsearch/
+plugins/vdr-extrecmenu/vdr-plugin-extrecmenu/
+plugins/vdr-fritzbox/libnetpp-boost-1.67-fix.patch
+plugins/vdr-graphlcd/vdr-plugin-graphlcd/
+plugins/vdr-hddarchive/vdr-plugin-hddarchive/
+plugins/vdr-iptv/3Sat.conf
+plugins/vdr-iptv/Bundesligen-TV.conf
+plugins/vdr-iptv/Daytona-Beach.conf
+plugins/vdr-iptv/NASA.conf
+plugins/vdr-iptv/Sky-News.conf
+plugins/vdr-iptv/THE_VOICE.conf
+plugins/vdr-iptv/zdf-iptv.conf
+plugins/vdr-iptv/zdf_info-iptv.conf
+plugins/vdr-iptv/zdf_kultur-iptv.conf
+plugins/vdr-markad/vdr-plugin-markad/
+plugins/vdr-mpv/vdr-plugin-mpv/
+plugins/vdr-neutrinoepg/vdr-2.4-neutrinoepg.diff
+plugins/vdr-noepg/vdr-plugin-noepg/
+plugins/vdr-play/vdr-plugin-play/
+plugins/vdr-skinenigmang/vdr-plugin-skinenigmang/
+plugins/vdr-sleeptimer/vdr-sleeptimer-Makefile
+plugins/vdr-softhddevice/vdr-plugin-softhddevice/
+plugins/vdr-softhdvaapi/vdr-plugin-softhdvaapi/
+plugins/vdr-streamdev/vdr-plugin-streamdev/
+plugins/vdr-suspendoutput/12_suspendoutput_nooutput.patch
+plugins/vdr-tvscraper/vdr-tvscraper-vdr2.3.1-fix.patch
+plugins/vdr-vdrmanager/vdr-manager/
+plugins/vdr-vnsiserver/vdr-plugin-vnsiserver/
+plugins/vdr-wirbelscan/vdr-plugin-wirbelscan/
+plugins/vdr-xineliboutput/xineliboutput/
+plugins/vdr-xmltv2vdr/vdr-plugin-xmltv2vdr/
+vdr-checkts/vdr-checkts/
