--- a/repo-make.conf
+++ b/repo-make.conf
@@ -6,8 +6,8 @@
 REPONAME=vdr4arch
 CHECKSCRIPT=./checkpkg
 
-#deps/cxxtools
-#deps/graphlcd-base
+deps/cxxtools
+deps/graphlcd-base
 deps/libdvbcsa
 #deps/libmcli
 deps/linuxtv-dvb-apps
@@ -32,6 +32,7 @@ irmplircd
 #naludump
 #tvheadend
 #oscam
+vdr-api
 vdr
 vdr-addon-lifeguard
 vdr-checkts
@@ -40,7 +41,7 @@ vdr4arch-keyring
 #vdradmin-am
 vdrnfofs
 vdrpbd
-w_scan
+#w_scan
 vdr-xorg
 #yausbir_lirc
 kodi-standalone-service
@@ -49,10 +50,11 @@ plugins/vdr-autostart
 plugins/vdr-bgprocess
 plugins/vdr-cdplayer
 plugins/vdr-cecremote
-plugins/vdr-chanman
-plugins/vdr-channellists
+#plugins/vdr-chanman
+#plugins/vdr-channellists
 plugins/vdr-channelscan
 plugins/vdr-cinebars
+plugins/vdr-ciplus
 plugins/vdr-dbus2vdr
 plugins/vdr-ddci2
 plugins/vdr-devstatus
@@ -74,11 +76,11 @@ plugins/vdr-fritzbox
 plugins/vdr-gamepad
 plugins/vdr-graphlcd
 graphlcd-skins/pearldpf-simple
-plugins/vdr-hddarchive
-plugins/vdr-imonlcd
+#plugins/vdr-hddarchive
+#plugins/vdr-imonlcd
 plugins/vdr-iptv
-plugins/vdr-lcdproc
-plugins/vdr-live
+#plugins/vdr-lcdproc
+#plugins/vdr-live
 #plugins/vdr-loadepg Build fails with GCC 7
 plugins/vdr-markad
 plugins/vdr-mp3
@@ -87,7 +89,7 @@ plugins/vdr-neutrinoepg
 plugins/vdr-noepg
 plugins/vdr-osdteletext
 plugins/vdr-osd2web
-plugins/vdr-peer
+#plugins/vdr-peer
 plugins/vdr-play
 plugins/vdr-pulsecontrol
 plugins/vdr-radio
@@ -97,7 +99,7 @@ plugins/vdr-restfulapi
 plugins/vdr-rpihddevice
 plugins/vdr-rssreader
 plugins/vdr-satip
-plugins/vdr-scraper2vdr
+#plugins/vdr-scraper2vdr
 plugins/vdr-skindesigner
 plugins/vdr-skinenigmang
 #plugins/vdr-plex
@@ -119,6 +121,7 @@ plugins/vdr-remoteosd
 #plugins/vdr-remotetimers
 plugins/vdr-systeminfo
 plugins/vdr-targavfd
+plugins/vdr-vaapidevice
 #plugins/vdr-text2skin
 #text2skin-skins/anthra-1024
 #text2skin-skins/anthra-1280-fs
