nordlichtsepg: updated vdrapi

--- a/repo-make.conf
+++ b/repo-make.conf
@@ -116,6 +116,7 @@ plugins/vdr-suspendoutput
 plugins/vdr-svdrposd
 plugins/vdr-svdrpservice
 plugins/vdr-epgsync
+plugins/vdr-nordlichtsepg
 plugins/vdr-trayopenng
 plugins/vdr-remoteosd
 #plugins/vdr-remotetimers
